--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div id="detailLine"></div>
             <br>
             <h1 style="font-family: monospace;">What is dogecoin??</h1>
-            <i style="color: rgb(180, 180, 180);"><span style="color: rgb(255, 0, 0);"Dogecoin is a decentralized, peer-to-peer digital currency that enables you to easily send money online. Think of it as "the internet currency."</i>
+            <i style="color: rgb(180, 180, 180);"><span style="color: rgb(255, 0, 0);">"Dogecoin is a decentralized, peer-to-peer digital currency that enables you to easily send money online. Think of it as "the internet currency."</i>
             <div id="detailLine"></div>
             <br>
             <h1 style="font-family: monospace;">Where you can find me</h1>
