--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
             <i style="color: rgb(180, 180, 180);"><a href="https://www.youtube.com/channel/UCL5xK_bdx-6OCbWb4LY_ARA" target = "_blank" style="color: rgb(180, 180, 180);">YouTube</a><br><br><a href="https://www.youtube.com/watch?v=ZyaSdj5tDQ8&t=36s" target = "_blank" style="color: rgb(180, 180, 180);">My Fishing Video</a><br><br><a href="https://www.youtube.com/watch?v=pIhOHuQ8TaU" target = "_blank" style="color: rgb(180, 180, 180);">My Spawn Killing Video</a></i>
             <div id="detailLine"></div>
             <br>
-            <h1 style="font-family: monospace;">Games</h1>
-            <button id="gamesBtn">VIEW</button>
+            <h1 style="font-family: monospace;">CPU Mining Website</h1>
+            <button id="minerBtn">Cpu Miner</button>
             <div id="detailLine"></div>
             <br>
             <h1 style="font-family: monospace; color: rgb(114, 137, 218);">Discord</h1>
-            <button id="discordBtn">JOIN</button>
+            <button id="discordBtn">Join The Community</button>
             <br>
             <br>
             <br>
@@ -121,12 +121,12 @@
         <script type="text/javascript">
             const scriptBtn = document.getElementById("scriptBtn");
             const copyPopup = document.getElementById("copyPopup");
-            const gamesBtn = document.getElementById("gamesBtn");
+            const minerBtn = document.getElementById("minerBtn");
             const discordBtn = document.getElementById("discordBtn");
 
             scriptBtn.addEventListener("click", () => {
                 const scriptBox = document.createElement("textarea");
-                scriptBox.value = 'BUY DANKPOTS! REALLY DANK PRICES!';
+                scriptBox.value = 'So doge much cheap wow doge';
                 document.body.appendChild(scriptBox);
                 scriptBox.select();
                 document.execCommand("copy");
@@ -135,12 +135,12 @@
                 setTimeout(() => {copyPopup.style.display = "none";}, 1000);
             });
 
-            gamesBtn.addEventListener("click", () => {
-                window.open("https://crishoux.github.io/OwlHub/games");
+            minerBtn.addEventListener("click", () => {
+                window.open("https://coinpot.co/mine/dogecoin/?ref=F374612CD53C");
             });
 
             discordBtn.addEventListener("click", () => {
-                window.open("https://discord.gg/8tskYSf");
+                window.open("https://discord.gg/EmsRpVz");
             });
         </script>
     </body>
