--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             });
 
             minerBtn.addEventListener("click", () => {
-                window.open("https://coinpot.co/mine/dogecoin/?ref=F374612CD53C");
+                window.open("https://coinpot.co/");
             });
 
             discordBtn.addEventListener("click", () => {
