--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             <i style="color: rgb(180, 180, 180);"><span style="color: rgb(255, 0, 0);">Dogecoin is a decentralized, peer-to-peer digital currency that enables you to easily send money online. Think of it as "the internet currency."</i>
             <div id="detailLine"></div>
             <br>
-            <h1 style="font-family: monospace;">Where you can find me</h1>
-            <i style="color: rgb(180, 180, 180);"><a href="https://www.youtube.com/channel/UCL5xK_bdx-6OCbWb4LY_ARA" target = "_blank" style="color: rgb(180, 180, 180);">YouTube</a><br><br><a href="https://www.youtube.com/watch?v=ZyaSdj5tDQ8&t=36s" target = "_blank" style="color: rgb(180, 180, 180);">My Fishing Video</a><br><br><a href="https://www.youtube.com/watch?v=pIhOHuQ8TaU" target = "_blank" style="color: rgb(180, 180, 180);">My Spawn Killing Video</a></i>
+            <h1 style="font-family: monospace;">Getting Started</h1>
+            <i style="color: rgb(180, 180, 180);"><a href="https://my.dogechain.info/#/overview" target = "_blank" style="color: rgb(180, 180, 180);">Create Dogecoin Wallet</a><br><br><a href="https://doge.live/" target = "_blank" style="color: rgb(180, 180, 180);">Invest your Dogecoin & Dogecoin miner</a><br><br><a href="https://dogemining.online/affiliate/15499" target = "_blank" style="color: rgb(180, 180, 180);">Fast Dogecoin Miner (Earn 1.83 Doge Daily!)</a></i>
             <div id="detailLine"></div>
             <br>
             <h1 style="font-family: monospace;">CPU Mining Website</h1>
