--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+	    
+	<a href="https://rollercoin.com/?r=kdvxaozp">
+	<img src="//rollercoin.com/static/img/referral/banners/ref_72890.gif" alt="promo"/>
+	</a>
+					
         <title>Dogecoin Tips</title>
 
         <meta charset = "utf-8">
