--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-	    
+<center>	    
 	<a href="https://rollercoin.com/?r=kdvxaozp">
 	<img src="//rollercoin.com/static/img/referral/banners/ref_72890.gif" alt="promo"/>
 	</a>
+<center>
 					
         <title>Dogecoin Tips</title>
 
