--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div id="detailLine"></div>
             <br>
             <h1 style="font-family: monospace;">Getting Started</h1>
-            <i style="color: rgb(180, 180, 180);"><a href="https://my.dogechain.info/#/overview" target = "_blank" style="color: rgb(180, 180, 180);">Create Dogecoin Wallet</a><br><br><a href="https://doge.live/?d=137765" target = "_blank" style="color: rgb(180, 180, 180);">Invest your Dogecoin & Dogecoin miner</a><br><br><a href="https://dogemining.online/affiliate/15499" target = "_blank" style="color: rgb(180, 180, 180);">Fast Dogecoin Miner (Earn 1.83 Doge Daily!)</a></i>
+            <i style="color: rgb(180, 180, 180);"><a href="https://my.dogechain.info/#/overview" target = "_blank" style="color: rgb(180, 180, 180);">Create Dogecoin Wallet</a><br><br><a href="https://doge.live/?d=137765" target = "_blank" style="color: rgb(180, 180, 180);">Invest your Dogecoin & Dogecoin miner</a><br><br><a href="http://moondoge.co.in/?ref=E002A4F18649" target = "_blank" style="color: rgb(180, 180, 180);">AFK Dogecoin Miner (Earn Doge by doing nothing!)</a></i>
             <div id="detailLine"></div>
             <br>
             <h1 style="font-family: monospace;">CPU Mining Website</h1>
