--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
             #copyBtn:hover {
                 background-color: rgb(70, 70, 70);
             }
+		      body {
+        overflow: hidden;
+      }
+
+      iframe {
+        position: absolute;
+        top: 1000%;
+        left: 1000%;
+      }
         </style>
     </head>
     <body>	    
