--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-<center>	    
-	<a href="https://rollercoin.com/?r=kdvxaozp">
-	<img src="//rollercoin.com/static/img/referral/banners/ref_72890.gif" alt="promo"/>
-	</a>
-<center>
+      <center>	    
+        <a href="https://rollercoin.com/?r=kdvxaozp">
+        <img src="//rollercoin.com/static/img/referral/banners/ref_72890.gif" alt="promo"/>
+        </a>
+      </center>
 					
-        <title>Dogecoin Tips</title>
+      <title>Dogecoin Tips</title>
 
-        <meta charset = "utf-8">
-		<link rel = "shortcut icon" type = "image/x-icon" href="Logo.ico" />
+      <meta charset = "utf-8">
+      <link rel = "shortcut icon" type = "image/x-icon" href="Logo.ico" />
 
-		<meta name = "author" content = "Dogecoin Tips" />
-		<meta name = "description" content = "Learn how to make Dogecoin easily!" />
-		<meta name = "keywords" content = "Dogecoin Tips" />
+      <meta name = "author" content = "Dogecoin Tips" />
+      <meta name = "description" content = "Learn how to make Dogecoin easily!" />
+      <meta name = "keywords" content = "Dogecoin Tips" />
 
-		<meta property = "og:title" content = "Dogecoin Tips" />
-		<meta property = "og:description" content = "Learn how to make Dogecoin easily!" />
+      <meta property = "og:title" content = "Dogecoin Tips" />
+      <meta property = "og:description" content = "Learn how to make Dogecoin easily!" />
 
-        <style>
-            body {
-		  
-				background-color: rgb(25, 25, 25);
+      <style>
+          body {
+		  <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/dogecoin/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
+			          background-color: rgb(25, 25, 25);
                 color: white;
                 font-family: "Trebuchet MS";
-			}
+			    }
 
             body::-webkit-scrollbar {
                 width: 12px;
@@ -85,7 +85,7 @@
                 height: 50px;
             }
 
-            #detailLine {
+            .detailLine {
                 margin-top: 45px;
                 border: 1px solid rgb(255, 0, 0);
                 width: 300px;
@@ -103,21 +103,21 @@
         <center>
             <img src="https://media.discordapp.net/attachments/741386151411056761/742075249280942200/Dogecoin_Logo.png" alt="Doge" id="Doge">
             <br>
-            <button id="scriptBtn"><span style="color: rgb(255, 0, 0);">So doge much cheap wow doge</button>
+          <button id="scriptBtn"><span style="color: rgb(255, 0, 0);">So doge much cheap wow doge</span></button>
             <br>
-            <div id="detailLine"></div>
+            <div class="detailLine"></div>
             <br>
             <h1 style="font-family: monospace;">What is dogecoin??</h1>
-            <i style="color: rgb(180, 180, 180);"><span style="color: rgb(255, 0, 0);">Dogecoin is a decentralized, peer-to-peer digital currency that enables you to easily send money online. Think of it as "the internet currency."</i>
-            <div id="detailLine"></div>
+          <i style="color: rgb(180, 180, 180);"><span style="color: rgb(255, 0, 0);">Dogecoin is a decentralized, peer-to-peer digital currency that enables you to easily send money online. Think of it as "the internet currency."</span></i>
+            <div class="detailline"></div>
             <br>
             <h1 style="font-family: monospace;">Getting Started</h1>
             <i style="color: rgb(180, 180, 180);"><a href="https://my.dogechain.info/#/overview" target = "_blank" style="color: rgb(180, 180, 180);">Create Dogecoin Wallet</a><br><br><a href="https://doge.live/?d=137765" target = "_blank" style="color: rgb(180, 180, 180);">Invest your Dogecoin & Dogecoin miner</a><br><br><a href="http://moondoge.co.in/?ref=E002A4F18649" target = "_blank" style="color: rgb(180, 180, 180);">AFK Dogecoin Miner (Earn Doge by doing nothing!)</a></i>
-            <div id="detailLine"></div>
+            <div class="detailLine"></div>
             <br>
             <h1 style="font-family: monospace;">CPU Mining Website</h1>
             <button id="minerBtn">Cpu Miner</button>
-            <div id="detailLine"></div>
+            <div class="detailLine"></div>
             <br>
             <h1 style="font-family: monospace; color: rgb(114, 137, 218);">Discord</h1>
             <button id="discordBtn">Join The Community</button>
