--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             });
 
             discordBtn.addEventListener("click", () => {
-                window.open("https://discord.gg/EmsRpVz");
+                window.open("https://discord.gg/S948cCq");
             });
         </script>
     </body>
