--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>			
-        <title>Dogecoin Tips</title>
+        <title>Dogecoin Farm</title>
         <meta charset = "utf-8">
 		<meta name = "author" content = "Dogecoin Farm" />
 		<meta name = "description" content = "My Personal Crypto Farm" />
@@ -54,31 +54,11 @@
         </style>
     </head>
     <body>	    
-	    
-        <input type="text" value="Copied to clipboard!" readonly id="copyPopup">
         <center>
             <img src="https://media.discordapp.net/attachments/741386151411056761/742075249280942200/Dogecoin_Logo.png" alt="Doge" id="Doge">
             <br>
-            <button id="scriptBtn"><span style="color: rgb(255, 0, 0);">So doge much cheap wow doge</button>
-            <br>
-            <div id="detailLine"></div>
-            <br>
-            <h1 style="font-family: monospace;">What is dogecoin??</h1>
-            <i style="color: rgb(180, 180, 180);"><span style="color: rgb(255, 0, 0);">Dogecoin is a decentralized, peer-to-peer digital currency that enables you to easily send money online. Think of it as "the internet currency."</i>
-            <div id="detailLine"></div>
-            <br>
-            <h1 style="font-family: monospace;">Getting Started</h1>
-            <i style="color: rgb(180, 180, 180);"><a href="https://my.dogechain.info/#/overview" target = "_blank" style="color: rgb(180, 180, 180);">Create Dogecoin Wallet</a><br><br><a href="https://doge.live/?d=137765" target = "_blank" style="color: rgb(180, 180, 180);">Invest your Dogecoin & Dogecoin miner</a><br><br><a href="http://moondoge.co.in/?ref=E002A4F18649" target = "_blank" style="color: rgb(180, 180, 180);">AFK Dogecoin Miner (Earn Doge by doing nothing!)</a></i>
-            <div id="detailLine"></div>
-            <br>
-            <h1 style="font-family: monospace;">CPU Mining Website</h1>
-            <button id="minerBtn">Cpu Miner</button>
-            <div id="detailLine"></div>
-            <br>
             <h1 style="font-family: monospace; color: rgb(114, 137, 218);">Discord</h1>
             <button id="discordBtn">Join The Community</button>
-            <br>
-            <br>
             <br>
         </center>
 
