--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <style>
             body {
 		  
-				background-color: rgb(25, 25, 25);
+		background-color: rgb(25, 25, 25);
                 color: white;
                 font-family: "Comic Sans";
 			}
@@ -40,24 +40,13 @@
                 width: 100px; 
                 height: 50px;
             }
-
-            #detailLine {
-                margin-top: 45px;
-                border: 1px solid rgb(255, 0, 0);
-                width: 300px;
-                height: 0px;
-            }
-
-            #copyBtn:hover {
-                background-color: rgb(70, 70, 70);
-            }
         </style>
     </head>
     <body>	    
         <center>
             <img src="https://media.discordapp.net/attachments/741386151411056761/742075249280942200/Dogecoin_Logo.png" alt="Doge" id="Doge">
             <br>
-            <h1 style="font-family: monospace; color: rgb(114, 137, 218);">Discord</h1>
+            <h1 style="font-family: comic sans; color: rgb(114, 137, 218);">Discord</h1>
             <button id="discordBtn">Join The Community</button>
             <br>
         </center>
