--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		  
 		background-color: rgb(25, 25, 25);
                 color: white;
-                font-family: "Comic Sans";
+                font-family: "monospace";
 			}
 
             body::-webkit-scrollbar {
@@ -46,7 +46,7 @@
         <center>
             <img src="https://media.discordapp.net/attachments/741386151411056761/742075249280942200/Dogecoin_Logo.png" alt="Doge" id="Doge">
             <br>
-            <h1 style="font-family: comic sans; color: rgb(114, 137, 218);">Discord</h1>
+            <h1 style="font-family: monospace; color: rgb(114, 137, 218);">Discord</h1>
             <button id="discordBtn">Join The Community</button>
             <br>
         </center>
