--- a/index.html
+++ b/index.html
@@ -58,5 +58,12 @@
                 window.open("https://discord.gg/S948cCq");
             });
         </script>
+	    <center>
+	    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/coinpottokens/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
+	    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/bitcoincore/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
+	    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/bitcoincash/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
+	    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/litecoin/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
+	    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/dash/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
+	    <center>
     </body>			
 </html>
