--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 	    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/bitcoincash/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
 	    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/litecoin/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
 	    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/dash/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
-	    <center>
+	    <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/dogecoin/?ref=F374612CD53C&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>    
+	    </center>
     </body>			
 </html>
