--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta charset = "utf-8">
 		<meta name = "author" content = "Dogecoin Farm" />
 		<meta name = "description" content = "My Personal Crypto Farm" />
-
 		<meta property = "og:title" content = "Dogecoin Farm" />
 		<meta property = "og:description" content = "My Personal Crypto Farm!" />
 	    
@@ -44,7 +43,7 @@
     </head>
     <body>	    
         <center>
-            <img src="https://media.discordapp.net/attachments/741386151411056761/742075249280942200/Dogecoin_Logo.png" alt="Doge" id="Doge">
+            <img src="https://tenor.com/view/doge-dog-weird-funny-dog-intensifies-gif-15547612" alt="Doge" id="Doge">
             <br>
             <h1 style="font-family: monospace; color: rgb(114, 137, 218);">Discord</h1>
             <button id="discordBtn">Join The Community</button>
